--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="stylesheet" href="styles/styles.css" />
     <title>Pricing Card</title>
+  </head>
+  <body>
     <div class="card-container">
       <h1>Monthly Subscription</h1>
       <p class="card-info">Full flexibility and access to all our features!</p>
@@ -86,6 +88,5 @@
         <a class="button" href="">Join now</a>
       </div>
     </div>
-  </head>
-  <body></body>
+  </body>
 </html>
